<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.exoplatform</groupId>
    <artifactId>exo.parent</artifactId>
    <version>8.1</version>
  </parent>
  <groupId>org.exoplatform.mobile.platform</groupId>
  <artifactId>exo-mobile-android</artifactId>
  <version>2.2-SNAPSHOT</version>
  <packaging>apk</packaging>
  <name>eXo Mobile Android</name>
  <description>eXo Mobile Android projects.</description>
  <scm>
 	<connection>scm:git:git://github.com/exoplatform/mobile-android.git</connection>
 	<developerConnection>scm:git:git@github.com:exoplatform/mobile-android.git</developerConnection>
 	<url>http://fisheye.exoplatform.org/browse/mobile/exo-mobile-android</url>
  </scm>
  <properties>
    <!-- SNAPSHOTS must be deployed in our private repository -->
    <exo.snapshots.repo.url>http://repository.exoplatform.org/content/repositories/exo-private-snapshots</exo.snapshots.repo.url>
    <!-- Runtimes -->
    <com.google.android.version>2.1.2</com.google.android.version>
    <!-- Libraries -->
    <org.jivesoftware.smack.version>3.1.0</org.jivesoftware.smack.version>
    <commons-lang.version>2.4</commons-lang.version>
    <!-- Default version of SDK to use -->
    <android.sdk.platform>7</android.sdk.platform>
    <!-- Maven Plugins -->
    <maven-android-plugin.plugin-version>3.0.0</maven-android-plugin.plugin-version>
    <!-- Java version -->
    <maven.compiler.target>1.6</maven.compiler.target>
    <maven.compiler.source>1.6</maven.compiler.source>
    <version.release.plugin>2.2.1</version.release.plugin>
	<version.buildnumber.plugin>1.0</version.buildnumber.plugin>
  </properties>
  
   <!-- Profiles definition for Android build -->
  <profiles>
    <profile>
      <id>release</id>
      <properties>
        <!-- To be able to retrieve an unsigned apk
             and use it for publication on android market  -->
        <android.sign.debug>both</android.sign.debug>
      </properties>
    </profile>
  </profiles>
  
  
  <dependencies>
    <!-- Dependency With Social Client Library -->
    <dependency>
      <groupId>org.exoplatform.social</groupId>
      <artifactId>exo.social.client</artifactId>
      <version>1.0.0-alpha4-SNAPSHOT</version>
      <exclusions>
        <!-- Exclusion for slf4j not compatible with android -->
        <exclusion>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-api</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <!-- Dependency With Android -->
    <dependency>
      <groupId>com.google.android</groupId>
      <artifactId>android</artifactId>
      <version>${com.google.android.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>jivesoftware</groupId>
      <artifactId>smack</artifactId>
      <version>${org.jivesoftware.smack.version}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>commons-lang</groupId>
      <artifactId>commons-lang</artifactId>
      <version>${commons-lang.version}</version>
    </dependency>
    <!-- Dependency With SLF4J for Android -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-android</artifactId>
      <version>1.6.1-RC1</version>
      <scope>compile</scope>
    </dependency>
    <!-- Dependency With Greendroid library for Android -->
    <dependency>
      <groupId>com.greendroid</groupId>
      <artifactId>greendroid</artifactId>
      <version>67aa3ed</version>
      <type>apklib</type>
    </dependency>
  </dependencies>
  
  
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.jayway.maven.plugins.android.generation2</groupId>
          <artifactId>android-maven-plugin</artifactId>
          <version>${maven-android-plugin.plugin-version}</version>
        </plugin>
        <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
        <plugin>
        	<groupId>org.eclipse.m2e</groupId>
        	<artifactId>lifecycle-mapping</artifactId>
        	<version>1.0.0</version>
        	<configuration>
        		<lifecycleMappingMetadata>
        			<pluginExecutions>
        				<pluginExecution>
        					<pluginExecutionFilter>
        						<groupId>
        							com.jayway.maven.plugins.android.generation2
        						</groupId>
        						<artifactId>
        							android-maven-plugin
        						</artifactId>
        						<versionRange>
        							[3.0.0-alpha-14,)
        						</versionRange>
        						<goals>
        							<goal>manifest-update</goal>
        							<goal>proguard</goal>
        						</goals>
        					</pluginExecutionFilter>
        					<action>
        						<ignore />
        					</action>
        				</pluginExecution>
        			</pluginExecutions>
        		</lifecycleMappingMetadata>
        	</configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>com.jayway.maven.plugins.android.generation2</groupId>
        <artifactId>android-maven-plugin</artifactId>
        <configuration>
          <dexJvmArguments>
            <jvmArgument>-Xshare:auto</jvmArgument>
            <jvmArgument>-Xms128M</jvmArgument>
            <jvmArgument>-Xmx1G</jvmArgument>
            <jvmArgument>-XX:MaxPermSize=256M</jvmArgument>
          </dexJvmArguments>
          <extractDuplicates>true</extractDuplicates>
        </configuration>
        <extensions>true</extensions>
        <executions>
          <execution>
            <id>manifestUpdate</id>
            <phase>process-resources</phase>
            <goals>
              <goal>manifest-update</goal>
            </goals>
          </execution>
          <execution>
            <id>alignApk</id>
            <phase>package</phase>
            <goals>
              <goal>zipalign</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
    <sourceDirectory>src</sourceDirectory>
  </build>
</project>